fixed header alignment
fixed header alignment

--- a/css/site.css
+++ b/css/site.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Dosis');
 @import url('https://fonts.googleapis.com/css?family=Montserrat'); 
 
+.header {
+    float: right;
+    padding-right: 35px;
+}
+
 #title {
     color: #2e2e2e;
-    float: right;
-    text-align: right;
-    padding-right: 35px;
     font-size: 28px;
     font-family: Dosis;
     font-weight: 400;
@@ -21,4 +23,5 @@
     font-style: normal;
     line-height: 1em;
     color: #999;
+    text-align: right;
 }
